add: 初步实现插桩

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'liyueyang'
 }
 
 android {
@@ -48,4 +49,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+traceMan {
+    open = true //这里如果设置为false,则会关闭插桩
+    logTraceInfo = true //这里设置为true时可以在log日志里看到所有被插桩的类和方法
+    traceConfigFile = "${project.projectDir}\\traceconfig.txt"
 }
